<resources>
    <string name="app_name">Curious Cafe Clubs</string>
    <string name="nickName">Nickname</string>
    <string name="time_01">8 Uhr</string>
    <string name="time_02">11 Uhr</string>
    <string name="time_03">15 Uhr</string>
    <string name="time_04">17 Uhr</string>
    <string name="visual">Visual Novel</string>
    <string name="chat_01">Blabla...</string>
    <string name="chat_02">Waaassss????</string>
    <string name="chat_03">Und du so?</string>
    <string name="chat_04">;)</string>
    <string name="chat_05">Jo Diggah!</string>
    <string name="chat_06">hast voll recht!</string>
    <string name="chat_07">nee,ne</string>
    <string name="answer_01">Erzähl mir mehr!</string>
    <string name="answer_02">Das hast du getan?</string>
    <string name="answer_03">Und was wurde daraus?</string>
    <string name="answer_04">Jammer nicht rum.</string>
    <string name="mail_01">Jemand musste Josef K. verleumdet haben, denn ohne dass er etwas Böses getan hätte, wurde er eines Morgens verhaftet. »Wie ein Hund!« sagte er, es war, als sollte die Scham ihn überleben. Als Gregor Samsa eines Morgens aus unruhigen Träumen erwachte, fand er sich in seinem Bett zu einem ungeheueren Ungeziefer verwandelt. Und es war ihnen wie eine Bestätigung ihrer neuen Träume und guten Absichten, als am Ziele ihrer Fahrt die Tochter als erste sich erhob und ihren jungen Körper dehnte. »Es ist ein eigentümlicher Apparat«, sagte der Offizier zu dem Forschungsreisenden und überblickte mit einem gewissermaßen bewundernden Blick den ihm doch wohlbekannten Apparat. Sie hätten noch ins Boot springen können, aber der Reisende hob ein schweres, geknotetes Tau vom Boden, drohte ihnen damit und hielt sie dadurch von dem Sprunge ab. In den letzten Jahrzehnten ist das Interesse an Hungerkünstlern sehr zurückgegangen. Aber sie überwanden sich, umdrängten den Käfig und wollten sich gar nicht fortrühren.Jemand musste Josef K. verleumdet haben, denn ohne dass er etwas Böses getan hätte, wurde er eines Morgens verhaftet. »Wie ein Hund!« sagte er, es war, als sollte die Scham ihn überleben. Als Gregor Samsa eines Morgens aus unruhigen Träumen erwachte, fand er sich ENDE.</string>
    <string name="mail_sender_01">Cat Boy\ncattyboy@coolestclub.com\nCoolest Club</string>
    <string name="name_01">Cat Boy</string>
    <string name="name_02">Snake Man</string>
    <string name="name_03">Dragon Guy</string>
    <string name="club_01">Kitty Club</string>
    <string name="club_02">Snake Coffees</string>
    <string name="club_03">Dragon Boys</string>
    <string name="club_04">Bunnies</string>
    <string name="change">ändern</string>
    <string name="configure">konfigurieren</string>
    <string name="set">anpassen</string>
    <string name="skip">skip</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="error_invalid_email">Die Eingabe ist ungültig.</string>
    <string name="error_invalid_password">Benutzername und Passwort stimmen nicht überein.</string>
    <string name="error_incorrect_password">Benutzername und Passwort stimmen nicht überein.</string>
    <string name="error_field_required">Bitte fülle dieses Feld aus.</string>
    <string name="permission_rationale">"Zur Vervollständigung von Mail-Adressen wird der Zugriff auf die Kontakte benötigt."</string>
    <string name="keepSignedIn">Angemeldet bleiben</string>
    <string name="guestLogin">Als Gast anmelden</string>
    <string name="forgottenPW">Passwort vergessen?</string>
    <string name="questions">Hast du irgendwelche Fragen?</string>
    <string name="registerButton">Kein Account? Registrieren!</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="story">Story</string>
    <string name="extras">Extras</string>
    <string name="settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="calendar">Kalender</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="messages">Nachrichten</string>
    <string name="mails">E-Mails</string>
    <string name="phone">Telefon</string>
    <string name="guestList">Gästeliste</string>
    <string name="photos">Fotos</string>
    <string name="coffee">Kaffee</string>
    <string name="title_activity_game_menu">GameMenu</string>
    <string name="achievements">Errungenschaften</string>
    <string name="unread">ungelesen</string>
    <string name="read">gelesen</string>
    <string name="successful">erfolgreich</string>
    <string name="failed">gescheitert</string>
    <string name="volume">Lautstärke</string>
    <string name="pushMessage">Push-Nachrichten</string>
    <string name="timeZone">Zeitzone</string>
    <string name="ringtones">Klingeltöne</string>
    <string name="account">Account</string>
    <string name="autoLI">automatische Anmeldung</string>
    <string name="send">senden</string>
    <string name="title_activity_phone_calls">PhoneCalls</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="calls">Anrufe</string>
    <string name="contacts">Kontakte</string>
    <string name="choose_chat">Chat wählen</string>
    <string name="title_activity_guest_list">guestList</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="avatar_00">avatar_00</string>
    <string name="avatar_01">avatar_01</string>
    <string name="avatar_02">avatar_02</string>
    <string name="avatar_03">avatar_03</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_frame_status">frame_status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
</resources>