<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/stat_sys_phone_call"
            android:title="@string/phone" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/btn_default"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/mails" />
    </group>

    <item android:title="@string/achievements">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/photos" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_popup_disk_full"
                android:title="@string/guestList" />
        </menu>
    </item>

</menu>
