<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleUnread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unread" />

        <GridLayout
            android:id="@+id/gridUnread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

        <TextView
            android:id="@+id/titleRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read" />

        <GridLayout
            android:id="@+id/gridRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

        <TextView
            android:id="@+id/titleSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/successful" />

        <GridLayout
            android:id="@+id/gridSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

        <TextView
            android:id="@+id/titleFailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/failed" />

        <GridLayout
            android:id="@+id/gridFailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

    </LinearLayout>
</ScrollView>