<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleClub_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/club_01" />

        <GridLayout
            android:id="@+id/gridClub_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

        <TextView
            android:id="@+id/titleClub_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/club_02" />

        <GridLayout
            android:id="@+id/gridClub_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

        <TextView
            android:id="@+id/titleClub_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/club_03" />

        <GridLayout
            android:id="@+id/gridClub_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

        <TextView
            android:id="@+id/titleClub_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/club_04" />

        <GridLayout
            android:id="@+id/gridClub_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">
        </GridLayout>

    </LinearLayout>
</ScrollView>